--- a/StellaServerConsole/StellaServerConsole.csproj
+++ b/StellaServerConsole/StellaServerConsole.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
     <ItemGroup>
-    <None Update="Resources\Bitmaps\colorful-images-1.jpg">
+    <None Update="Resources\Bitmaps\colorful-images-1.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
@@ -123,7 +123,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
-    <None Update="Resources\Storyboards\Sterk\Clear.yaml">
+    <None Update="Resources\Storyboards\Sterk\00_Clear.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </None>
