--- a/StellaWebInterface/ClientApp/package.json
+++ b/StellaWebInterface/ClientApp/package.json
@@ -1,50 +1,23 @@
 {
-  "name": "StellaWebInterface",
+  "name": "stella-web-interface",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^8.0.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.3.1",
-    "css-loader": "^0.28.11",
+    "brace": "^0.11.1",
     "dotnetify": "^3.4.0",
-    "file-loader": "^1.1.11",
-    "fs": "0.0.1-security",
-    "fusioncharts": "^3.12.2",
-    "jquery": "3.3.1",
-    "material-ui-image": "^3.2.0",
-    "net": "^1.0.2",
     "react": "^16.3.2",
     "react-ace": "^7.0.2",
     "react-dom": "^16.3.2",
-    "react-fusioncharts": "^1.0.5",
-    "react-popper": "^0.10.4",
-    "react-redux": "^5.1.1",
     "react-rnd-rotate": "^0.0.19",
-    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^2.1.8",
-    "reactstrap": "^6.3.0",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "rimraf": "^2.6.2",
-    "socket.io-client": "^2.2.0",
-    "socket.io-react": "^1.2.0",
-    "socketio-file-upload": "^0.7.0",
-    "style-loader": "^0.21.0",
-    "uglify-js": "^3.3.4",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.14"
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
-    "ajv": "^6.0.0",
     "babel-eslint": "^9.0.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.12.0",
