--- a/StellaServerConsole/Resources/Storyboards/Sterk/WhiteTrace.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Sterk/WhiteTrace.yaml
@@ -4,30 +4,30 @@ Animations:
  - !MovingPattern
    StartIndex:  0
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  360
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  720
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1080
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1440
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1800
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
