--- a/StellaServerConsole/Resources/Storyboards/Cloud/FullLengthStrobo.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Cloud/FullLengthStrobo.yaml
@@ -4,5 +4,5 @@ Animations:
  - !RepeatingPattern
    StartIndex:  0
    StripLength: 3600
-   FrameWaitMs: 55
+   TimeUnitsPerFrame: 55
    Patterns: [[[255,255,255]],[[0,0,0]],[[0,0,0]],[[0,0,0]]]
