--- a/StellaServerConsole/Resources/Storyboards/Cloud/WhiteRain.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Cloud/WhiteRain.yaml
@@ -4,6 +4,6 @@ Animations:
  - !FadingPulse
    StartIndex:  0
    StripLength: 3600
-   FrameWaitMs: 40
+   TimeUnitsPerFrame: 40
    Color: [255,255,255]
    FadeSteps: 16
