--- a/StellaServerConsole/Resources/Storyboards/Cloud/WhiteStars.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Cloud/WhiteStars.yaml
@@ -4,6 +4,6 @@ Animations:
  - !RandomFade
    StartIndex:  0
    StripLength: 3600
-   FrameWaitMs: 40
+   TimeUnitsPerFrame: 40
    FadeSteps: 16
    Pattern: [[50,50,50],[255,255,255],[50,50,50]]
