--- a/StellaServerConsole/Resources/Storyboards/Cloud/WhiteTrace -ArrowHead.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Cloud/WhiteTrace -ArrowHead.yaml
@@ -4,34 +4,34 @@ Animations:
  - !MovingPattern
    StartIndex:  0
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 1000
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  600
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 500
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1200
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1800
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  2400
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 500
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  3000
    StripLength: 600
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 1000
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
