--- a/StellaServerConsole/Resources/Storyboards/OneTubeTwoPis.yaml
+++ b/StellaServerConsole/Resources/Storyboards/OneTubeTwoPis.yaml
@@ -4,11 +4,11 @@ Animations:
  - !Bitmap
    StartIndex:  0
    StripLength: 120
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    ImageName: test-04-circle08
  - !Bitmap	
    StartIndex:  120
    StripLength: 120
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 100
    ImageName: test-04-circle08
