--- a/StellaServerConsole/Resources/Storyboards/SmallTest.yaml
+++ b/StellaServerConsole/Resources/Storyboards/SmallTest.yaml
@@ -4,11 +4,11 @@ Animations:
  - !MovingPattern
    StartIndex:  0
    StripLength: 15
-   FrameWaitMs: 50
+   TimeUnitsPerFrame: 50
    Pattern: [[0,0,0], [255,0,0], [0,0,0]]
  - !MovingPattern
    StartIndex:  15
    StripLength: 15
-   FrameWaitMs: 50
+   TimeUnitsPerFrame: 50
    RelativeStart: 1000
    Pattern: [[0,0,0], [0,0,255], [0,0,0]]
