--- a/StellaServerConsole/Resources/Storyboards/Sterk/00_Clear.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Sterk/00_Clear.yaml
@@ -4,5 +4,5 @@ Animations:
  - !RepeatingPattern
    StartIndex:  0
    StripLength: 2160
-   FrameWaitMs: 55
+   TimeUnitsPerFrame: 55
    Patterns: [[[0,0,0]]]
