--- a/StellaServerConsole/Resources/Storyboards/Sterk/RedBlueStrobo.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Sterk/RedBlueStrobo.yaml
@@ -4,5 +4,5 @@ Animations:
  - !RepeatingPattern
    StartIndex:  0
    StripLength: 2160
-   FrameWaitMs: 55
+   TimeUnitsPerFrame: 55
    Patterns: [[[255,0,0]],[[200,0,0]],[[150,0,0]],[[0,0,150]],[[0,0,200]],[[0,0,255]],[[0,0,200]],[[0,0,150]],[[150,0,0]],[[200,0,0]]]
