--- a/StellaServerConsole/Resources/Storyboards/Sterk/WhiteTrace -ArrowHead.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Sterk/WhiteTrace -ArrowHead.yaml
@@ -4,34 +4,34 @@ Animations:
  - !MovingPattern
    StartIndex:  0
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 1000
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  360
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 500
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  720
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1080
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1440
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 500
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
    StartIndex:  1800
    StripLength: 360
-   FrameWaitMs: 10
+   TimeUnitsPerFrame: 10
    RelativeStart: 1000
    Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
