--- a/StellaServerConsole/Resources/Storyboards/StoryboardExample.yaml
+++ b/StellaServerConsole/Resources/Storyboards/StoryboardExample.yaml
@@ -4,11 +4,11 @@ Animations:
  - !MovingPattern
    StartIndex:  0
    StripLength: 1200
-   FrameWaitMs: 50
+   TimeUnitsPerFrame: 50
    Pattern: [[255,0,0]]
  - !FadingPulse
    StartIndex:  1200
    StripLength: 1200
-   FrameWaitMs: 50
+   TimeUnitsPerFrame: 50
    Color: [0,255,0]
    FadeSteps: 6
