--- a/StellaServer/StellaServer.csproj
+++ b/StellaServer/StellaServer.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StellaServerLib\StellaServerLib.csproj" />
+  </ItemGroup>
+
 </Project>
