--- a/StellaServerLib.Test/StellaServerLib.Test.csproj
+++ b/StellaServerLib.Test/StellaServerLib.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
+    <PackageReference Include="System.IO.Abstractions" Version="12.1.1" />
   </ItemGroup>
 
   <ItemGroup>
