--- a/StellaServerLib.Test/StellaServerLib.Test.csproj
+++ b/StellaServerLib.Test/StellaServerLib.Test.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.2" />
     <PackageReference Include="System.IO.Abstractions" Version="12.1.1" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="12.1.1" />
   </ItemGroup>
 
   <ItemGroup>
