--- a/StellaWebInterface/StellaWebInterface.csproj
+++ b/StellaWebInterface/StellaWebInterface.csproj
@@ -20,6 +20,7 @@
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
     <Content Include="ClientApp\src\components\Blocks\Status.js" />
+    <Content Include="ClientApp\src\components\General.js" />
     <Content Include="ClientApp\src\routers\PublicRouter.js" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
