Serialization of settings

--- a/VideoMapping/packages.config
+++ b/VideoMapping/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DynamicData" version="6.15.1" targetFramework="net48" />
   <package id="Fody" version="6.2.0" targetFramework="net48" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
   <package id="ReactiveUI" version="11.4.17" targetFramework="net48" />
   <package id="ReactiveUI.Fody" version="11.4.17" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="11.4.17" targetFramework="net48" />
