--- a/VideoMapping/packages.config
+++ b/VideoMapping/packages.config
@@ -3,12 +3,20 @@
   <package id="DynamicData" version="6.15.1" targetFramework="net48" />
   <package id="Fody" version="6.2.0" targetFramework="net48" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
+  <package id="OpenCvSharp4" version="4.5.2.20210404" targetFramework="net48" />
+  <package id="OpenCvSharp4.runtime.win" version="4.5.2.20210404" targetFramework="net48" />
+  <package id="OpenCvSharp4.Windows" version="4.5.2.20210404" targetFramework="net48" />
+  <package id="OpenCvSharp4.WpfExtensions" version="4.5.2.20210404" targetFramework="net48" />
   <package id="ReactiveUI" version="11.4.17" targetFramework="net48" />
   <package id="ReactiveUI.Fody" version="11.4.17" targetFramework="net48" />
   <package id="ReactiveUI.WPF" version="11.4.17" targetFramework="net48" />
   <package id="Splat" version="9.4.5" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="5.0.2" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Reactive" version="4.4.1" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
