--- a/StellaClientCpp/StellaClientCpp.vcxproj
+++ b/StellaClientCpp/StellaClientCpp.vcxproj
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ConcurrentDoubleEndedQueue.h" />
     <ClInclude Include="Message.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
