--- a/StellaClientCpp/StellaClientCpp.vcxproj
+++ b/StellaClientCpp/StellaClientCpp.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="ConcurrentDoubleEndedQueue.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="TcpClient.h" />
+    <ClInclude Include="UdpClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
