Read the enitre package on async receive. uint8_t as data type for the buffer instead of char.

--- a/StellaClientCpp/StellaClientCpp.vcxproj
+++ b/StellaClientCpp/StellaClientCpp.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="ConcurrentDoubleEndedQueue.h" />
+    <ClInclude Include="FrameProtocol.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="TcpClient.h" />
     <ClInclude Include="UdpClient.h" />
