--- a/StellaServerLib/StellaServerLib.csproj
+++ b/StellaServerLib/StellaServerLib.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="ReactiveUI" Version="11.4.17" />
+    <PackageReference Include="ReactiveUI.Fody" Version="11.4.17" />
     <PackageReference Include="SharpYaml" Version="1.6.5" />
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
     <PackageReference Include="System.IO.Abstractions" Version="12.1.1" />
