--- a/StellaServerAPI.Test/StellaServerAPI.Test.csproj
+++ b/StellaServerAPI.Test/StellaServerAPI.Test.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
  
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <OutputType>Library</OutputType>
     <ApplicationIcon />
