--- a/StellaServerLib.Test/StellaServerLib.Test.csproj
+++ b/StellaServerLib.Test/StellaServerLib.Test.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0-windows</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <OutputType>Library</OutputType>
   </PropertyGroup>
