--- a/StellaServer/Resources/Storyboards/12rows_2columns_vertical/WhiteTrace.yaml
+++ b/StellaServer/Resources/Storyboards/12rows_2columns_vertical/WhiteTrace.yaml
@@ -1,56 +1,10 @@
 ﻿!Storyboard
-Name: WhiteTrace
+Name: WhiteTrace - outer rows only
 Animations:
-#client 1
  - !MovingPattern
-   StartIndex:  0
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
+   RowIndex:  0
+   Pattern: &pattern [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
  - !MovingPattern
-   StartIndex:  240
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  480
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  720
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
-  #client 2
- - !MovingPattern
-   StartIndex:  960
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  1200
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  1440
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  1680
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
-  #client 3
- - !MovingPattern
-   StartIndex:  1920
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  2160
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  2400
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- - !MovingPattern
-   StartIndex:  2640
-   StripLength: 240
-   Pattern: [[0,0,0],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255],[255,255,255]]
- 
+   RowIndex:  11
+   Pattern: *pattern
 
