Use the mapping to obtain the number or rows, number of columns. Use the RowIndex and StretchToCanvas settings in the bitmapStoryBoardCreator

--- a/StellaServerLib/StellaServerLib.csproj
+++ b/StellaServerLib/StellaServerLib.csproj
@@ -21,4 +21,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="StellaServerLib.Test" />
+  </ItemGroup>
+
+
 </Project>
